--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -7,6 +7,7 @@
     [user]="post.user"
     [date]="post.date"
   >
-    <app-like [count]="post.likeCount"></app-like>
+    <app-like [(count)]="post.likeCount">
+    </app-like>
   </app-post>
 </section>
