--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,5 +1,5 @@
 <section class="mw7 center">
-  <h2 class="athelas ph3 ph0-l">My Blog {{ count }}</h2>
+  <h2 class="athelas ph3 ph0-l">My Blog</h2>
   <app-post
     *ngFor="let post of posts"
     [title]="post.title"
