--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,7 +1,7 @@
 <section class="mw7 center">
   <h2 class="athelas ph3 ph0-l">My Blog</h2>
   <app-post
-    *ngFor="let post of posts"
+    *ngFor="let post of postsService.postsState"
     [title]="post.title"
     [body]="post.body"
     [user]="post.user"
