--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,13 +1,16 @@
 <section class="mw7 center">
   <h2 class="athelas ph3 ph0-l">My Blog</h2>
+
   <app-post
-    *ngFor="let post of postsService.postsState"
+    *ngFor="let post of postsService.posts$ | async"
     [title]="post.title"
     [body]="post.body"
     [user]="post.user"
     [date]="post.date"
   >
-    <app-like   [(count)]="post.likeCount">
+    <app-like
+      [count]="post.likeCount"
+      (countChange)="postsService.updateLike(post.id)">
     </app-like>
   </app-post>
 </section>
