--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,6 +1,11 @@
 <section class="mw7 center">
   <h2 class="athelas ph3 ph0-l">My Blog</h2>
 
+  <p *ngIf="error"
+    class="pa3 ba b--gold bg-light-yellow gold br2 ma3">
+    {{ error }}
+  </p>
+
   <app-post
     *ngFor="let post of postsService.posts$ | async"
     [title]="post.title"
