--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -2,12 +2,21 @@
   <fieldset class="cf bn ma0 pa0 black-80">
     <legend class="pa0 f5 mb3">Search for blog posts</legend>
     <div class="flex">
+
       <input class="f5 input-reset bn bg-white pa3 lh-solid w-100 flex-auto br2 br--left"
         type="text"
-        name="query">
+        name="query"
+        ngModel
+        #query="ngModel"
+        (keyup)="updateQuery(query.value)"
+      >
+
       <input class="f5 button-reset pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w4 br2 br--right"
         type="submit"
-        value="Search">
+        value="Search"
+        (click)="updateQuery(query.value)"
+      >
+
     </div>
   </fieldset>
 </form>
